- better logging for user requests - implemented post trip request